@@ -294,10 +294,12 @@ public abstract class ExternalSorter {
         conf.getInt(
             TezRuntimeConfiguration.TEZ_RUNTIME_IO_SORT_MB, 
             TezRuntimeConfiguration.TEZ_RUNTIME_IO_SORT_MB_DEFAULT);
-    //Higher bound checks are done in individual sorter implementations
-    Preconditions.checkArgument(initialMemRequestMb > 0,
-        TezRuntimeConfiguration.TEZ_RUNTIME_IO_SORT_MB + " should be larger than 0");
     long reqBytes = ((long) initialMemRequestMb) << 20;
+    //Higher bound checks are done in individual sorter implementations
+    Preconditions.checkArgument(initialMemRequestMb > 0 && reqBytes < maxAvailableTaskMemory,
+        TezRuntimeConfiguration.TEZ_RUNTIME_IO_SORT_MB + " " + initialMemRequestMb + " should be "
+            + "larger than 0 and should be less than the available task memory (MB):" +
+            (maxAvailableTaskMemory >> 20));
     LOG.info("Requested SortBufferSize ("
         + TezRuntimeConfiguration.TEZ_RUNTIME_IO_SORT_MB + "): "
         + initialMemRequestMb);
